# RexCoin

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  WHITEPAPER.md
docker/: Dockerfile
docs/: api-reference.md  architecture.md  mining-guide.md
src/: bls.cpp  ecdsa.cpp  ecdsa.h  main.cpp  sha256.cpp  sha256.h  wallet.cpp
src/api/: rest.cpp  rest.h  rpc.cpp  rpc.h  websocket.cpp  websocket.h
src/consensus/: difficulty.cpp  difficulty.h  hybrid.cpp  hybrid.h  pos.cpp  pos.h  pow.cpp  pow.h
src/core/: block.cpp  block.h  blockchain.cpp  blockchain.h  mempool.cpp  mempool.h  merkle.cpp  merkle.h  script.cpp  script.h  transaction.cpp  transaction.h  utxo.cpp  utxo.h
src/crypto/: base58.cpp  base58.h  bls.h  hash160.cpp  hash160.h  ripemd160.cpp  ripemd160.h  sha3.cpp  sha3.h  wallet.h
src/governance/: dao.cpp  dao.h  proposal.cpp  proposal.h  vote.h
src/layer2/: channel.cpp  channel.h  lightning.cpp  lightning.h  sidechain.cpp  sidechain.h
src/network/: dns_seed.cpp  dns_seed.h  node.cpp  node.h  peer.cpp  peer.h  protocol.cpp  protocol.h  sync.cpp  sync.h  tor.cpp  tor.h
src/privacy/: mixer.cpp  mixer.h  stealth.cpp  stealth.h  zkproof.cpp  zkproof.h
src/storage/: cache.cpp  cache.h  leveldb.cpp  leveldb.h  pruning.cpp  pruning.h
src/vm/: compiler.cpp  compiler.h  gas.cpp  gas.h  opcode.cpp  opcode.h  vm.cpp  vm.h
tests/: core_test.cpp  crypto_test.cpp  network_test.cpp  vm_test.cpp
